#220 - Move the entire legacy test configuration into the profile declaration